--- a/Views/HelloWorld/Index.cshtml
+++ b/Views/HelloWorld/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Index";
-    ViewData["MyName"] = "John Rowley";
+    ViewData["Title"] = "Movie List";
 }
 
-<h2>Index / ( @ViewData["Title"] ) </h2>
+<h2>My Movie List</h2>
 
 <p>Hello from our View Template!</p>
-<p>My name is @ViewData["MyName"]</p>
